--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ torchaudio = "^2.3.0"
 pyhip = "^1.0.0"
 scipy = "^1.13.0"
 tqdm = "^4.66.4"
+pycryptodome = "^3.20.0"
+keras = "^3.3.3"
 
 
 [build-system]
